--- a/ToDo.txt
+++ b/ToDo.txt
@@ -30,13 +30,4 @@ resmin yüksek çözünlürlüklü versiyonun bul özlelliğ
 
 uygulamayı sadece f11e basınca görüyorum. yoksa pencere gelmyor.
 
-butonlara basma ilevi full screen imageden kaldır. home_view_model den olsun. tıpkı photo griddeki gibi olsun.
-şuan fullscreenimage sayfasından esc ile çıkamıyorum. sağ sol yön tuşlarıyla fotoğrafar arası geçiş yapamıyorum
-
-yeni fotoğrafları analiz ederken renklere göre filtremek için de bir analiz yap. filtrelerden renk seçilebilisn.
-
-fotoğrafları seçtim ve sürükleyip masaüstüne atacağım diyelim. çalışıyor ama eksik çalışıyor. sadece o sayfada görünen seçili fotoğrafları üsürkleyip kopyalayabiliyorum. diğer kopyalanmıyorlar
-
-tüm sorunların çözüldüğünden emin ol
-
-ui gizle tab
+fotoğrafları seçtim ve sürükleyip masaüstüne atacağım diyelim. çalışıyor ama eksik çalışıyor. sadece o sayfada görünen seçili fotoğrafları üsürkleyip kopyalayabiliyorum. diğer seçili olsa da ekranda gösterilimoyrsa kopyalanmıyorlar
